--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon -e ts  --exec \"npm run server\"",
+    "server": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -15,6 +16,10 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "bulma": "^0.4.1",
+    "nodemon": "^1.11.0",
+    "q": "^1.5.0",
+    "rpio": "^0.9.16",
+    "sleep": "^5.1.1"
   }
 }
